@@ -1,6 +1,6 @@
 /*
  * 
- * Copyright  1990-2006 Sun Microsystems, Inc. All Rights Reserved.
+ * Copyright  1990-2008 Sun Microsystems, Inc. All Rights Reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER
  * 
  * This program is free software; you can redistribute it and/or
@@ -35,18 +35,29 @@ package sun.misc;
 import java.net.URL;
 import java.security.PermissionCollection;
 import java.security.Permissions;
+import java.io.IOException;
 import java.io.File;
 import java.io.FileReader;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.io.BufferedReader;
+import java.io.IOException;
+import java.util.jar.JarFile;
+import java.util.zip.ZipEntry;
 import java.util.Vector;
 import java.net.MalformedURLException;
+import java.util.HashSet;
 
 public final
 class MIDPConfig{
     /* The MIDP library classloader */
     private static MIDPImplementationClassLoader midpImplCL;
+    /* The midlet classloader */
+    /*private static MIDletClassLoader midletCL;*/
     /* The MemberFilter */
     private static MemberFilter memberFilter;
+    /* The classes allowed for Midlet */
+    private static HashSet allowedClasses; 
 
     public static String MIDPVersion = "2.0";
     public static String CLDCVersion = "1.1";
@@ -56,9 +67,7 @@ class MIDPConfig{
      */
     static String
     systemPackages[] = {
-	"java.lang.",
-	"java.io.",
-	"java.util.",
+	"java.",
 	"javax.microedition."
     };
 
@@ -67,9 +76,26 @@ class MIDPConfig{
         memberFilter = newMemberFilter();
     }
 
-    static String permittedSystemClasses[];
-	// filled by reading a file.
-	// see getPermittedClasses() below
+    private static File[] getDefaultPath() throws IOException {
+        String libdir = System.getProperty("java.home") + 
+            File.separator + "lib" + File.separator;
+        String jars[] = split(System.getProperty(
+            "com.sun.midp.implementation"), ' ');
+        int num = jars.length;
+        File files[] = new File[num];
+
+        for (int i = 0; i<num; i++) {
+            String jar = libdir + jars[i];
+            File f = new File(jar);
+
+            if (!f.exists()) {
+                throw new IOException("Can't find " + jar);
+            }
+            files[i] = f;
+        }
+
+        return files;
+    }
 
 
     /*
@@ -86,7 +112,8 @@ class MIDPConfig{
 		"lib" + File.separator + "MIDPFilterConfig.txt";
 	    MemberFilterConfig mfc = new MemberFilterConfig(filename);
 	    MemberFilter mf;
-	    // DEBUG System.out.println("Starting MemberFilter file parsing");
+	    // DEBUG System.out.println(
+            //   "Starting MemberFilter file parsing");
 	    // DEBUG mfc.setVerbose(true);
 	    mf = mfc.parseFile();
 	    // DEBUG System.out.println("Done MemberFilter file parsing");
@@ -97,24 +124,8 @@ class MIDPConfig{
 	}
     }
 
-    private static String[]
-    getPermittedClasses(){
-	if (permittedSystemClasses != null){
-	    return permittedSystemClasses;
-	}
-	BufferedReader infile;
-	Vector classnames;
-	int    nnames = 0;
-	String filename =
-		System.getProperty("java.home") + File.separator +
-		"lib" + File.separator + "MIDPPermittedClasses.txt";
-	try{
-	    infile = new BufferedReader(new FileReader(filename));
-	}catch(java.io.IOException e){
-	    /*DEBUG*/ System.err.println("Could not open "+filename);
-	    return null;
-	}
-	classnames = new Vector();
+    private static void
+    readPermittedClassFile(BufferedReader infile) {
 	try{
 	    while(true){
 		String inline = infile.readLine();
@@ -124,68 +135,52 @@ class MIDPConfig{
 		    continue; // blank line
 		if (inline.charAt(0) == '#')
 		    continue; // comment
-		classnames.add(inline);
-		nnames += 1;
+		allowedClasses.add(inline.intern());
 	    }
-	    infile.close();
 	}catch(java.io.IOException e){
-	    /*DEBUG*/ System.err.println("Exception while reading "+filename);
-	    return null;
 	}
-	permittedSystemClasses = new String[nnames];
-	classnames.copyInto(permittedSystemClasses);
-	return permittedSystemClasses;
     }
 
-    /*
-     * Set up the MIDPImplementationClassLoader.
-     * All MIDlets will share the same MIDPImplementationClassLoader,
-     * and thus the same class instances. This is required if we want
-     * to be able to coordinate their resource use.
-     * (Assuming that the implementation don't have any static fields
-     * that would make this sharing a bad idea!)
-     *
-     * We trust these classes, so grant them all permissions.
-     */
-    /* NOTE: this should be removed once the MIDP code is fixed to
-     * use the newMIDPImplementationClassLoader(URL[]) API.
-     */
-    public static MIDPImplementationClassLoader
-    newMIDPImplementationClassLoader(String midpJarNames[]){
-        /* The MIDPImplementationClassLoader already exist. Throw an
-         * exception.
-         */
-        if (midpImplCL != null) {
+    /* Read the permitted class list. */
+    private static void
+    getPermittedClasses() {
+        BufferedReader infile;
+
+        allowedClasses = new HashSet();
+
+        /* First, read the default lib/MIDPPermittedClasses.txt */
+        try {
+	    String filename =
+		System.getProperty("java.home") + File.separator +
+		"lib" + File.separator + "MIDPPermittedClasses.txt";
+
+	    infile = new BufferedReader(new FileReader(filename));
+            readPermittedClassFile(infile);
+            infile.close();
+        } catch (IOException ie) {
             throw new InternalError(
-                "The MIDPImplementationClassLoader is already created");
+                "Failed to read lib/MIDPPermittedClasses.txt");
         }
+        
+        /* Then, search the jar files in the bootclasspath to see if
+         * there are additional class lists. */
+        String jarfiles[] = split(
+                System.getProperty("sun.boot.class.path"),
+                File.pathSeparatorChar);
+        int num = jarfiles.length;
 
-	String permittedClasses[];
-	URL midpBase[] = new URL[midpJarNames.length];
-	PermissionCollection perms = new Permissions();
-	for (int i=0; i<midpJarNames.length; i++){
-	    try {
-		midpBase[i] = new URL("file://".concat(midpJarNames[i]));
-	    }catch(java.io.IOException e){
-		// DEBUG System.err.println("initMidpImplementation URL Creation:");
-		e.printStackTrace();
-		// END DEBUG
-		return null;
-	    }
-	}
-	perms.add(new java.security.AllPermission());
-	//DEBUG System.out.println("Constructing MIDPImplementationClassLoader with permissions "+perms);
-	permittedClasses = getPermittedClasses();
-	if (permittedClasses == null){
-	    // there was some problem in reading the file
-	    return null;
-	}
-         
-	midpImplCL = new MIDPImplementationClassLoader(
-				midpBase, permittedClasses, perms,
-				null);
-	return midpImplCL;
-
+        for (int i = 0; i < num; i++) {
+            try {
+                JarFile jarfile = new JarFile(jarfiles[i]);
+                ZipEntry entry = jarfile.getEntry("MIDPPermittedClasses.txt");
+                if (entry != null) {
+                    InputStream jis = jarfile.getInputStream(entry);
+                    infile = new BufferedReader(new InputStreamReader(jis));
+                    readPermittedClassFile(infile);
+                    infile.close();
+                }
+            } catch (IOException ioe) {}
+        }
     }
 
     public static MIDPImplementationClassLoader
@@ -203,30 +198,35 @@ class MIDPConfig{
                 "The MIDPImplementationClassLoader is already created");
         }
 
-        URL urls[] = new URL[files.length];
-	String permittedClasses[];
         PermissionCollection perms = new Permissions();
 
+        if (files == null || files.length == 0) {
+            try {
+                files = getDefaultPath();
+            } catch (IOException e) {
+                System.err.println(e.getMessage());
+                e.printStackTrace();
+                return null;
+            }
+        }
+        URL urls[] = new URL[files.length];
         for (int i = 0; i < files.length; i++) {
             try {
                 urls[i] = files[i].toURL();
             } catch (MalformedURLException e) {
                 e.printStackTrace();
-                return null;
+                urls = null;
+		break;
             }
         }
 
 	perms.add(new java.security.AllPermission());
 	//DEBUG System.out.println(
-        //  "Constructing MIDPImplementationClassLoader with permissions "+perms);
-	permittedClasses = getPermittedClasses();
-	if (permittedClasses == null){
-	    // there was some problem in reading the file
-	    return null;
-	}
+        //  "Constructing MIDPImplementationClassLoader with permissions "
+        //  +perms);
 	midpImplCL = new MIDPImplementationClassLoader(
-				urls, permittedClasses, perms,
-				null);
+				urls, perms, null);
+
 	return midpImplCL;
     }
 
@@ -270,13 +270,20 @@ class MIDPConfig{
      */
 
     static String[]
-    split(String path){
+    split(String path, char separator){
 	int nComponents = 1;
-	char separator = System.getProperty("path.separator", ":").charAt(0);
+        //char separator = ' ';
 	String components[];
-	int length = path.length();
+	int length;
 	int start;
 	int componentIndex;
+
+        if (path == null) {
+            components = new String[0];
+            return components;
+        }
+
+        length = path.length();
 	for (int i=0; i<length; i++){
 	    if (path.charAt(i) == separator)
 		nComponents += 1;
@@ -301,63 +308,206 @@ class MIDPConfig{
 
     /*
      * This version allows the caller to specify a set of permissions.
-     * This is less useful than the usual version, which grants the permissions
-     * we plan on granting to MIDlets.
+     * This is less useful than the usual version, which grants the 
+     * permissions we plan on granting to MIDlets.
+     *
+     * The 'enableFilter' argument specifies that if the API hiding
+     * filter is being enabled. If the filter is enabled, midlet
+     * can only access CLDC/MIDP classes. If the filter is disabled,
+     * midlet can access all classes on the bootclasspath, including
+     * all the CDC classes.
+     *
+     * The 'auxClassLoader' is a helper classloader used when the
+     * MIDletClassLoader and its parents fail to load the requested
+     * class. 
      */
     private static MIDletClassLoader
     newMIDletClassLoader(
-	String midPath[], MemberFilter mf, PermissionCollection perms,
-	MIDPImplementationClassLoader implClassLdr)
+	String midpPath[], MemberFilter mf,
+        PermissionCollection perms,
+	MIDPImplementationClassLoader implClassLdr,
+        boolean enableFilter,
+        ClassLoader auxClassLoader,
+        MIDPBridgeInterface bridgeInterface)
     {
+        if (midpImplCL == null) {
+            throw new InternalError(
+	        "Need to create the parent MIDPImplementationClassLoader first");
+        }
+
 	URL midJarURL[];
-	MIDletClassLoader myClassLoader;
-	int nComponents = midPath.length;
+	int nComponents = midpPath.length;
 
 	midJarURL = new URL[nComponents];
 	try {
 	    for (int i=0; i<nComponents; i++){
-		midJarURL[i] = new URL("file://".concat(midPath[i]));
+		midJarURL[i] = new File(midpPath[i]).toURI().toURL();
 	    }
 	}catch(Exception e){
 	    System.err.println("URL Creation:");
 	    e.printStackTrace();
 	    return null;
 	}
-	//DEBUG  System.out.println("Constructing MIDletClassLoader with permissions "+perms);
-	myClassLoader = new MIDletClassLoader(midJarURL, systemPackages,
-					      perms, mf, implClassLdr);
+	//DEBUG  System.out.println(
+        //    "Constructing MIDletClassLoader with permissions "+perms);
+	MIDletClassLoader midletCL = new MIDletClassLoader(
+                                           midJarURL, systemPackages,
+					   perms, mf, implClassLdr,
+                                           enableFilter, auxClassLoader,
+                                           bridgeInterface);
 
-	return myClassLoader;
+	return midletCL;
     }
 
     /*
      * This version allows the caller to specify a set of permissions.
      * The parent classloader is the MIDPImplementationClassLoader.
+     * The API hiding filter is enabled.
      */
     public static MIDletClassLoader
     newMIDletClassLoader(
-	String midPath[], PermissionCollection perms)
+	String midpPath[], PermissionCollection perms)
     {
-        return newMIDletClassLoader(midPath,
+        return newMIDletClassLoader(midpPath,
                                     memberFilter,
                                     perms,
-                                    midpImplCL);
+                                    midpImplCL,
+                                    true,
+                                    null,
+                                    null);
     }
 
     /*
      * Use the default midlet permission collection. The parent classloader
-     * is the MIDPImplementationClassLoader.
+     * is the MIDPImplementationClassLoader. The API hiding filter is
+     * enabled.
      */
     public static MIDletClassLoader
-    newMIDletClassLoader(String midPath[])
+    newMIDletClassLoader(String midpPath[])
     {
-        if (midpImplCL == null) {
-            throw new InternalError(
-	        "Need to create the parent MIDPImplementationClassLoader first");
-        }
-	return newMIDletClassLoader(midPath,
+	return newMIDletClassLoader(midpPath,
                                     memberFilter,
                                     midletPermissions,
-                                    midpImplCL);
+                                    midpImplCL,
+                                    true,
+                                    null,
+                                    null);
+    }
+
+    /*
+     * The 'enableFilter' argument specifies that if the API hiding
+     * filter is being enabled. If the filter is enabled, midlet
+     * can only access CLDC/MIDP classes. If the filter is disabled,
+     * midlet can access all classes on the bootclasspath, including
+     * all the CDC classes.
+     *
+     * The 'auxClassLoader' is a helper classloader used when the
+     * MIDletClassLoader and its parents fail to load the requested
+     * class. 
+     */
+    public static MIDletClassLoader
+    newMIDletClassLoader(String midpPath[], boolean enableFilter,
+                         ClassLoader auxClassLoader)
+    {
+	return newMIDletClassLoader(midpPath,
+                                    memberFilter,
+                                    midletPermissions,
+                                    midpImplCL,
+                                    enableFilter,
+                                    auxClassLoader,
+                                    null);
+    }
+
+    public static MIDletClassLoader
+    newMIDletClassLoader(String midpPath[], boolean enableFilter,
+                         PermissionCollection perms,
+                         MIDPBridgeInterface bridgeInterface)
+    {
+        return newMIDletClassLoader(midpPath,
+                                    memberFilter,
+                                    perms,
+                                    midpImplCL,
+                                    enableFilter,
+                                    null,
+                                    bridgeInterface);
+    }
+
+    /*
+     * Get the MIDletClassLoader instance that loads the caller
+     * midlet class.
+     */
+    public static MIDletClassLoader
+    getMIDletClassLoader() {
+        int i = 1; /* skip the direct caller, who must be system code */
+        ClassLoader loader = null;
+        Class cl = CVM.getCallerClass(i);
+
+        while (cl != null) {
+            loader = cl.getClassLoader();
+            if (loader instanceof MIDletClassLoader) {
+                return (MIDletClassLoader)loader;
+            }
+            cl = CVM.getCallerClass(++i);
+	}
+        return null;
+    }
+
+    /* 
+     * Call getResourceAsStream on the first MIDlet class loader on the stack.
+     */
+    public static InputStream getMIDletResourceAsStream(String name) {
+        ClassLoader cl = getMIDletClassLoader();
+
+        if (cl == null) {
+            return null;
+        }
+
+        return cl.getResourceAsStream(name);
+    }
+
+    /* 
+     * A utility method used to load a resource using all of the caller's
+     * classloaders. This is useful when application and system
+     * code are loaded by different classloaders. Note this will
+     * throw a security exception if the MIDlet does not have permission
+     * to get resources other than its own, unless called by system code
+     * within a doPriviledged method.
+     */
+    public static InputStream getSystemResourceAsStream(String name) {
+        int i = 1; /* skip the caller, which must be system code */
+        InputStream is = null;
+        ClassLoader lastFailedLoader = null;
+        
+        /* This is a bit slow since we need to walk up the stack.
+         * Because we don't know which classloader to load the resource,
+         * so we have to do it the hard way. */
+        while (is == null) {
+            Class cl = sun.misc.CVM.getCallerClass(i);
+            if (cl == null) { /* reach the top of the stack */
+	        break;
+	    }
+
+            ClassLoader loader = cl.getClassLoader();
+            if (i == 1 || loader != lastFailedLoader) {
+                is = cl.getResourceAsStream(name);
+                if (is != null) {
+                    break;
+		} else {
+		    lastFailedLoader = loader;
+		}
+	    }
+
+            i++; /* the next caller */
+	}
+        return is;
+    }
+
+    /* Check if the class is allowed for midlet. */
+    public static boolean isClassAllowed(String classname) {
+        // Get the permitted class list.
+        if (allowedClasses == null) {
+            getPermittedClasses();
+        }
+        return allowedClasses.contains(classname);
     }
 }
